# ontario-grid-data

./: .gitignore  CLAUDE.md  README.ipynb  README.md  REFACTOR_PLAN.md  environment.yml  gridwatch_scraper.py  output.csv  plants.csv  pyproject.toml  summary.csv
.github/workflows/: build.yml  scheduled-update.yml
data/: capability.csv  output.csv  plants.csv  summary.csv
data/IESO/: PUB_GenOutputCapabilityMonth_202002.csv  PUB_GenOutputCapabilityMonth_202003.csv  PUB_GenOutputCapabilityMonth_202004.csv  PUB_GenOutputCapabilityMonth_202005.csv  PUB_GenOutputCapabilityMonth_202008.csv  PUB_GenOutputCapabilityMonth_202103.csv  PUB_GenOutputCapabilityMonth_202104.csv  PUB_GenOutputCapabilityMonth_202108.csv  PUB_GenOutputCapabilityMonth_202204.csv  PUB_GenOutputCapabilityMonth_202210.csv
data/clean/IESO/: 2011.csv  2012.csv  2019.csv
data/clean/gridwatch.ca/: summary.csv
data/clean/oeb.ca/: Time-of-Use (TOU) rates.csv  Ultra-Low Overnight (ULO).csv
data/raw/IESO/: PUB_GenOutputCapabilityMonth_201908.csv  PUB_GenOutputCapabilityMonth_201911.csv  PUB_GenOutputCapabilityMonth_202006.csv  (+15 more)
docs/: VERSION  index.html  index.js  serviceWorker.js  site.webmanifest
notebooks/: .index.ipynb.layout  CA.py  Calculate grid intensity.ipynb  Download IESO data.ipynb  Download energy price data.ipynb  Fit models.ipynb  Gridwatch scraper.ipynb  Plot data.ipynb  index.ipynb
pipelines/: co2signal.py  gridwatch.py  ieso.py  oeb.py  utilities.py
pipelines/ieso/: CA.py  __main__.py  core.py
src/ontario_grid_data/: co2signal.py  gridwatch.py  oeb.py  utilities.py
(+106 files in other folders)
